--- a/index.css
+++ b/index.css
@@ -32,3 +32,19 @@
 .btn:hover{
     transform: scale(1.2);
 }
+
+.grid-container{
+    height: 70vh;
+    width: 50%;
+    background-color: white;
+}
+.grid{
+    display: grid;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    }
+
+.box{
+    border: 2px solid gray;
+    background-color:rgb(7, 49, 7);
+}
